# Erikabot2

./: .gitignore  README.md  bot.py  config.yaml  pyproject.toml  test.py
botpy/: api.py
db/: model.py
docs/: ToolList.md
utils/: QImage.py
